Fix css issue on mobile device, seperate likes icon further from comment icon

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -678,6 +678,10 @@ input[name='q']::placeholder {
     .post-title{
         margin-top: 10%;
     }
+
+    .col-1 {
+        margin-right: 15px;
+    }
 }
 
 @media (max-width: 767px) {
